@@ -55,13 +55,7 @@ public class MSSQLReverseEngineeringStrategy extends JDBCReverseEngineeringStrat
             theResult = theStatement.executeQuery();
             while (theResult.next()) {
                 String theViewDefinition = theResult.getString("VIEW_DEFINITION");
-                String theViewDefinitionLower = theViewDefinition.toLowerCase();
-                if (theViewDefinitionLower.startsWith("create view ")) {
-                    int p = theViewDefinitionLower.indexOf(" as ");
-                    if (p >= 0) {
-                        theViewDefinition = theViewDefinition.substring(p + 4);
-                    }
-                }
+                theViewDefinition = extractSelectDDLFromViewDefinition(theViewDefinition);
                 return theViewDefinition;
             }
             return null;
